--- a/popup.html
+++ b/popup.html
@@ -293,7 +293,7 @@
     
     <div class="form-group">
       <label for="autoPatternTemplate">Domain Template:</label>
-      <input type="text" id="autoPatternTemplate" placeholder="e.g. :name.*.oracles.cash.mc.hzuccon.com">
+      <input type="text" id="autoPatternTemplate" placeholder="e.g. :name.*.example.com">
     </div>
     
     <button id="addAutoPattern">Add Auto-Pattern</button>
